fixed slight horizontal scroll.  it was caused by padding on test site warning

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -8,7 +8,7 @@ figure {
 
 .test-site-warning {
   background-color: red;
-  padding: 5px 5px 5px 5px;
+  padding: 5px 0 5px 0;
   width:100%;
   color:black;
   text-align: center;
@@ -86,13 +86,6 @@ code.language-text {
   word-wrap: break-word;       // Internet Explorer 5.5+ 
 }
 */
-code {
-  white-space: pre-wrap;       //css-3 
-  white-space: -moz-pre-wrap;  //Mozilla, since 1999 
-  white-space: -pre-wrap;      // Opera 4-6 
-  white-space: -o-pre-wrap;    // Opera 7 
-  word-wrap: break-word;       // Internet Explorer 5.5+ 
-}
 
 @media screen and (max-width: 568px) {
  .site-title {
