--- a/workshop-main.css
+++ b/workshop-main.css
@@ -52,6 +52,15 @@ pre {
     padding: 1em;
 }
 
+code {
+    white-space: pre-wrap;       //css-3
+    white-space: -moz-pre-wrap;  //Mozilla, since 1999
+    white-space: -pre-wrap;      // Opera 4-6
+    white-space: -o-pre-wrap;    // Opera 7
+    word-wrap: break-word;       // Internet Explorer 5.5+
+}
+
+
 h1 {
     font-size: 2em;
 }
@@ -155,7 +164,7 @@ hr {
 
 .header .test-site-warning {
     background-color: red;
-    padding: 5px 5px 5px 5px;
+    padding: 5px 0 5px 0;
     width:100%;
     color:black;
     text-align: center
